--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,10 @@
 {
   "name": "weather-app",
-  "app_id": ""
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/api/forecast",
+      "proxyUrl": "https://api.forecast.io/forecast/092fec10c11996c441815be8ae480f3d/"
+    }
+  ]
 }
