--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
     "moment-timezone": "^0.5.3",
-    "suncalc": "^1.7.0"
+    "suncalc": "^1.7.0",
+    "ngCordova": "^0.1.24-alpha"
   }
 }
