--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,10 @@
     "ionic": "driftyco/ionic-bower#1.2.4",
     "moment-timezone": "^0.5.3",
     "suncalc": "^1.7.0",
-    "ngCordova": "^0.1.24-alpha"
+    "ngCordova": "^0.1.24-alpha",
+    "angular-mocks": "~1.4.0"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
   }
 }
